systemd-genie (2.2) buster bullseye bookworm sid focal bionic; urgency=medium

        * Single-file package python scripts.
        * Man page fixes.
        * Fixed building on Python 3.10.

 -- Alistair Young <avatar@arkane-systems.net>  Mon, 28 Feb 2022 18:30:00 -0500

systemd-genie (2.1) buster bullseye bookworm sid focal bionic; urgency=medium

        * Documentation updates.
        * Update /etc/hosts after hostname update.
        * Minor fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Mon, 28 Feb 2022 16:03:00 -0500

systemd-genie (2.0b) buster bullseye bookworm sid focal bionic; urgency=medium

        * Major rewrite in Python, eliminating .NET dependency.
        * Moved executables from /usr/libexec/genie to /usr/lib/genie.
        * Allow configuration of hostname suffix.
        * Support for AppArmor namespaces.
        * Work to better handle simultaneity.
        * Extra warnings for problematic states.
        * Miscellaneous fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Tue, 22 Feb 2022 16:40:00 -0500

systemd-genie (1.44) buster bullseye bookworm sid focal bionic; urgency=medium

        * Standardized use of /usr/lib rather than /lib.
        * Updated ArkaneSystems.WSL to 0.2.13.
        * Made genie resolv.conf stub option-controlled.
        * Misc fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Sat, 07 Aug 2021 16:40:00 -0500

systemd-genie (1.43) buster bullseye bookworm sid focal bionic; urgency=medium

        * Based on collated systemd-analyze results, re-upped systemd startup
          timeout to 240.
        * Added automated creation of resolv.conf symlink (per #130).
        * Added fix for binfmt mount (per #142).

 -- Alistair Young <avatar@arkane-systems.net>  Thu, 29 Jul 2021 05:40:00 -0500

systemd-genie (1.42) buster bullseye bookworm sid focal bionic; urgency=medium

        * Regression fixes.

 -- Alistair Young <avatar@arkane-systems.net>  Thu, 13 May 2021 05:40:00 -0500
