@@ -3,6 +3,7 @@ systemd-genie (2.2) buster bullseye bookworm sid focal bionic; urgency=medium
         * Single-file package python scripts.
         * Man page fixes.
         * Fixed building on Python 3.10.
+        * Dropped the "local" install option (little used; use tarball instead).
 
  -- Alistair Young <avatar@arkane-systems.net>  Mon, 28 Feb 2022 18:30:00 -0500
 
